--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -365,7 +365,7 @@ bestcost_pm_deaths_lifetable_expDistribution <-
       population_midyear_male = lifetable_withPopulation[["male"]]$population, 
       population_midyear_female = lifetable_withPopulation[["female"]]$population, 
       year_of_analysis = 2019, 
-      info = input_data_mortality$pollutant[i], 
+      info = input_data_mortality$pollutant[2], 
       min_age = 20)
 
 # No study to compare bestcost results
@@ -486,8 +486,8 @@ bestcost_pm_yll_lifetable_expDistribution_geluft <-
     bestcost::attribute_yll_lifetable_rr(
       exp = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
-      cutoff = input_data_mortality$cutoff[i], # WHO AQG 2021 
-      rr = unlist(input_data_mortality[i, c("rr_central", "rr_lower", "rr_upper")]),
+      cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
+      rr = unlist(input_data_mortality[2, c("rr_central", "rr_lower", "rr_upper")]),
       rr_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
@@ -499,8 +499,8 @@ bestcost_pm_yll_lifetable_expDistribution_geluft <-
       population_midyear_male = lifetable_withPopulation[["male"]]$population, 
       population_midyear_female = lifetable_withPopulation[["female"]]$population, 
       year_of_analysis = 2019, 
-      info = input_data_mortality$pollutant[i], 
-      min_age = if(is.na(input_data_mortality$min_age[i])) NULL else input_data_mortality$min_age[i])
+      info = input_data_mortality$pollutant[2], 
+      min_age = if(is.na(input_data_mortality$min_age[2])) NULL else input_data_mortality$min_age[2])
 
 
 # No study to compare bestcost results
@@ -778,8 +778,8 @@ comparison_yll_lifetable_delta  <-
     population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
     population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
-    info_1 = input_data_mortality$pollutant[i],
-    info_2 = input_data_mortality$pollutant[i], 
+    info_1 = input_data_mortality$pollutant[2],
+    info_2 = input_data_mortality$pollutant[2], 
     min_age = 20,
     max_age = NULL)
 
@@ -877,8 +877,8 @@ comparison_yld_lifetable_delta  <-
     population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
     population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
-    info_1 = input_data_mortality$pollutant[i],
-    info_2 = input_data_mortality$pollutant[i], 
+    info_1 = input_data_mortality$pollutant[2],
+    info_2 = input_data_mortality$pollutant[2], 
     min_age = 20,
     max_age = NULL,
     #duration = 2,
