--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -95,11 +95,13 @@ load("../testing/input/data/input_data_for_testing_Rpackage.RData")
 # Assess attributable cases using the AirQ+ export as input data
 bestcost_pm_copd <-
   bestcost::attribute_health_singlebhd_rr(
-    exp = airqplus_pm_copd$mean_concentration,
+    exp_central = airqplus_pm_copd$mean_concentration,
     cutoff = airqplus_pm_copd$cut_off_value,   
-    bhd = airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk,
-    rr = c(airqplus_pm_copd$relative_risk, airqplus_pm_copd$relative_risk_lower, airqplus_pm_copd$relative_risk_upper),
-    rr_increment = 10, 
+    bhd_central = airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk,
+    rr_central = airqplus_pm_copd$relative_risk, 
+    rr_lower = airqplus_pm_copd$relative_risk_lower,
+    rr_upper = airqplus_pm_copd$relative_risk_upper,
+    erf_increment = 10, 
     erf_shape = "log_linear", 
     info = paste0(airqplus_pm_copd$pollutant,"_", airqplus_pm_copd$evaluation_name))
 
@@ -124,11 +126,11 @@ check_bestcost(result_list_bestcost = bestcost_pm_copd,
 # Assess attributable cases using the AirQ+ export as input data
 att_pm_copd_1rr_bestcost <-
   bestcost::attribute_health_singlebhd_rr(
-    exp = airqplus_pm_copd$mean_concentration,
+    exp_central = airqplus_pm_copd$mean_concentration,
     cutoff = airqplus_pm_copd$cut_off_value,   
-    bhd = airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk,
-    rr = airqplus_pm_copd$relative_risk,
-    rr_increment = 10, 
+    bhd_central = airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk,
+    rr_central = airqplus_pm_copd$relative_risk,
+    erf_increment = 10, 
     erf_shape = "log_linear", 
     info = paste0(airqplus_pm_copd$pollutant,"_", airqplus_pm_copd$evaluation_name))
 
@@ -173,7 +175,7 @@ bestcost_noise_ihd_expDist <-
     cutoff = min(niph_noise_ihd_input$exposure_mean), 
     bhd = niph_noise_ihd_input$gbd_daly[1],
     rr = rep(1.08, 3),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     info = data.frame(pollutant = "road_noise", outcome = "YLD"))
 
@@ -297,7 +299,7 @@ bestcost_pm_deaths_lifetable_airqplus <-
     rr = unlist(airqplus_pm_deaths_yll[["input"]][, c("relative_risk",
                                                       "relative_risk_lower",
                                                       "relative_risk_upper")]),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
     first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
     last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
@@ -322,7 +324,7 @@ bestcost_pm_deaths_lifetable_geluft <-
     cutoff = input_data_mortality$cutoff[2],   # PM2.5=5,i.e. WHO AQG 2021 
     rr = unlist(input_data_mortality[2,
                                       c("rr_central", "rr_lower", "rr_upper")]),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop = 0,
     last_age_pop = 99,
@@ -354,7 +356,7 @@ bestcost_pm_deaths_lifetable_expDistribution <-
       cutoff = input_data_mortality$cutoff[2],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
       rr = unlist(input_data_mortality[2,
                                        c("rr_central", "rr_lower", "rr_upper")]),
-      rr_increment = 10, 
+      erf_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
@@ -392,7 +394,7 @@ bestcost_pm_yll_lifetable_airqplus <-
     rr = unlist(airqplus_pm_deaths_yll[["input"]][, c("relative_risk",
                                                       "relative_risk_lower",
                                                       "relative_risk_upper")]),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
     first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
     last_age_pop = last(airqplus_pm_deaths_yll[["pop"]]$age_from...),
@@ -425,7 +427,7 @@ bestcost_pm_yll_lifetable_geluft <-
       prop_pop_exp = 1,
       cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
       rr = unlist(input_data_mortality[2, c("rr_central", "rr_lower", "rr_upper")]),
-      rr_increment = 10, 
+      erf_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
@@ -457,7 +459,7 @@ bestcost_pm_yll_lifetable_1rr_geluft <-
       prop_pop_exp = 1,
       cutoff = input_data_mortality$cutoff[2], 
       rr = unlist(input_data_mortality[2, c("rr_central")]), # Only one relative risk estimate
-      rr_increment = 10, 
+      erf_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
@@ -488,7 +490,7 @@ bestcost_pm_yll_lifetable_expDistribution_geluft <-
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[i], # WHO AQG 2021 
       rr = unlist(input_data_mortality[i, c("rr_central", "rr_lower", "rr_upper")]),
-      rr_increment = 10, 
+      erf_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
       last_age_pop = 99,
@@ -525,7 +527,7 @@ bestcost_pm_yld_lifetable_geluft  <-
     # prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data. Deactivate to test exposure distribution.
     cutoff = input_data_mortality$cutoff[2],
     rr = unlist(input_data_mortality[2, c("rr_central", "rr_lower", "rr_upper")]), # "rr_central", "rr_lower", "rr_upper"
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop = 0,last_age_pop = 99,
     prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
@@ -560,7 +562,7 @@ bestcost_pm_yld_singlebhd  <-
     cutoff = 5,    
     bhd = 25000,
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear", 
     disability_weight = 0.5)
 
@@ -588,7 +590,7 @@ comparison_singlebhd_rr_delta <-
     bhd_1 = 25000,
     bhd_2 = 25000,
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear", 
     info_1 = "PM2.5_mortality_2010",
     info_2 = "PM2.5_mortality_2020")
@@ -609,7 +611,7 @@ comparison_singlebhd_rr_pif <-
     bhd_1 = 25000,
     bhd_2 = 25000,
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear", 
     info_1 = "PM2.5_mortality_2010",
     info_2 = "PM2.5_mortality_2020")
@@ -660,7 +662,7 @@ comparison_deaths_lifetable_delta <-
     prop_pop_exp_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
@@ -706,7 +708,7 @@ comparison_deaths_lifetable_pif  <-
     prop_pop_exp_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
@@ -758,7 +760,7 @@ comparison_yll_lifetable_delta  <-
     prop_pop_exp_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
@@ -803,7 +805,7 @@ comparison_yll_lifetable_pif <-
     prop_pop_exp_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
@@ -857,7 +859,7 @@ comparison_yld_lifetable_delta  <-
     prop_pop_exp_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
@@ -903,7 +905,7 @@ comparison_yld_lifetable_pif <-
     prop_pop_exp_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
     last_age_pop_1 = 99,
@@ -953,7 +955,7 @@ comparison_yld_singlebhd_rr_delta <-
     bhd_1 = 25000,
     bhd_2 = 25000,
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear", 
     disability_weight = 0.5,
     info_1 = "PM2.5_yld_before",
@@ -979,7 +981,7 @@ comparison_yld_singlebhd_rr_pif <-
     bhd_1 = 25000,
     bhd_2 = 25000,
     rr = c(1.118, 1.060, 1.179),
-    rr_increment = 10, 
+    erf_increment = 10, 
     erf_shape = "log_linear", 
     disability_weight = 0.5,
     info_1 = "PM2.5_yld_before",
