--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -261,6 +261,8 @@ if(all((bestcost_prob_dying$prob_dying -
 # due to different rounding 
 # (bestcost does not round, while airqplus does)
 ```
+
+
 #### Premature deaths
 
 ```{r premature deaths with lifetable}
@@ -292,11 +294,11 @@ for(d in c("natural", "total")){
 
 bestcost_pm_deaths_lifetable_airqplus <-
   bestcost::attribute_deaths_lifetable_rr(
-    exp = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
+    exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
-    rr = unlist(airqplus_pm_deaths_yll[["input"]][, c("relative_risk",
-                                                      "relative_risk_lower",
-                                                      "relative_risk_upper")]),
+    rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
+    rr_lower = airqplus_pm_deaths_yll[["input"]]$relative_risk_lower,
+    rr_upper = airqplus_pm_deaths_yll[["input"]]$relative_risk_upper,
     erf_increment = 10, 
     erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
     first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
@@ -314,14 +316,16 @@ bestcost_pm_deaths_lifetable_airqplus <-
 check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_airqplus,
                result_vector_alternative = c(2600.9, 1371, 3804))
 
+
 # Now with input data from the Swiss project GeLuft
 bestcost_pm_deaths_lifetable_geluft <- 
     bestcost::attribute_deaths_lifetable_rr(
 
-    exp = input_data_mortality$exp[2], # PM2.5=8.85 exp in CH in 2019
+    exp_central = input_data_mortality$exp[2], # PM2.5=8.85 exp in CH in 2019
     cutoff = input_data_mortality$cutoff[2],   # PM2.5=5,i.e. WHO AQG 2021 
-    rr = unlist(input_data_mortality[2,
-                                      c("rr_central", "rr_lower", "rr_upper")]),
+    rr_central = input_data_mortality[2,"rr_central"], 
+    rr_lower = input_data_mortality[2,"rr_lower"], 
+    rr_upper = input_data_mortality[2,"rr_upper"],
     erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop = 0,
@@ -344,16 +348,19 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_geluft ,
 
 ```
 
+
+
 ```{r premature deaths with lifetable and exposure distribution}
 
 # Calculate premature deaths using bestcost function
 bestcost_pm_deaths_lifetable_expDistribution <- 
     bestcost::attribute_deaths_lifetable_rr(
-      exp = c(8, 9, 10), # Fake data just for testing purposes
+      exp_central = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[2],   # PM2.5=5, NO2=10, i.e. WHO AQG 2021 
-      rr = unlist(input_data_mortality[2,
-                                       c("rr_central", "rr_lower", "rr_upper")]),
+      rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
+      rr_lower = airqplus_pm_deaths_yll[["input"]]$relative_risk_lower,
+      rr_upper = airqplus_pm_deaths_yll[["input"]]$relative_risk_upper,
       erf_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
@@ -387,11 +394,11 @@ check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_geluft ,
 
 bestcost_pm_yll_lifetable_airqplus <-
   bestcost::attribute_yll_lifetable_rr(
-    exp = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
+    exp_central = airqplus_pm_deaths_yll[["input"]]$mean_concentration, 
     cutoff = airqplus_pm_deaths_yll[["input"]]$cut_off_value,
-    rr = unlist(airqplus_pm_deaths_yll[["input"]][, c("relative_risk",
-                                                      "relative_risk_lower",
-                                                      "relative_risk_upper")]),
+    rr_central = airqplus_pm_deaths_yll[["input"]]$relative_risk,
+    rr_lower = airqplus_pm_deaths_yll[["input"]]$relative_risk_lower,
+    rr_upper = airqplus_pm_deaths_yll[["input"]]$relative_risk_upper,
     erf_increment = 10, 
     erf_shape = gsub("-", "_", airqplus_pm_deaths_yll[["input"]]$calculation_method),
     first_age_pop = first(airqplus_pm_deaths_yll[["pop"]]$age_from...),
@@ -421,10 +428,12 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_airqplus,
 # Now with input data from the Swiss project GeLuft
 bestcost_pm_yll_lifetable_geluft <- 
   bestcost::attribute_yll_lifetable_rr(
-      exp = input_data_mortality$exp[2], #exp CH 2019
+      exp_central = input_data_mortality$exp[2], #exp CH 2019
       prop_pop_exp = 1,
       cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
-      rr = unlist(input_data_mortality[2, c("rr_central", "rr_lower", "rr_upper")]),
+      rr_central = input_data_mortality[2,"rr_central"], 
+      rr_lower = input_data_mortality[2,"rr_lower"], 
+      rr_upper =input_data_mortality[2,"rr_upper"], 
       erf_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
@@ -453,10 +462,10 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_geluft,
 
 bestcost_pm_yll_lifetable_1rr_geluft <- 
     bestcost::attribute_yll_lifetable_rr(
-      exp = input_data_mortality$exp[2],
+      exp_central = input_data_mortality$exp[2], #exp CH 2019
       prop_pop_exp = 1,
       cutoff = input_data_mortality$cutoff[2], 
-      rr = unlist(input_data_mortality[2, c("rr_central")]), # Only one relative risk estimate
+      rr_central = input_data_mortality[2,"rr_central"], 
       erf_increment = 10, 
       erf_shape = "log_linear",
       first_age_pop = 0,
@@ -477,6 +486,8 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_1rr_geluft,
 
 
 ```
+
+
 ```{r yll lifetable with exposure distribution}
 
 # Calculate years of life lost using bestcost function
@@ -484,10 +495,12 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_1rr_geluft,
 
 bestcost_pm_yll_lifetable_expDistribution_geluft <- 
     bestcost::attribute_yll_lifetable_rr(
-      exp = c(8, 9, 10), # Fake data just for testing purposes
+      exp_central = c(8, 9, 10), # Fake data just for testing purposes
       prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data just for testing purposes
       cutoff = input_data_mortality$cutoff[2], # WHO AQG 2021 
-      rr = unlist(input_data_mortality[2, c("rr_central", "rr_lower", "rr_upper")]),
+      rr_central = input_data_mortality[2,"rr_central"], 
+      rr_lower = input_data_mortality[2,"rr_lower"], 
+      rr_upper =input_data_mortality[2,"rr_upper"], 
       erf_increment = 10,
       erf_shape = "log_linear",
       first_age_pop = 0,
@@ -519,15 +532,18 @@ check_bestcost(result_list_bestcost = bestcost_pm_yll_lifetable_expDistribution_
 
 bestcost_pm_yld_lifetable_geluft  <- 
   attribute_yld_lifetable_rr(
-    exp = input_data_mortality$exp[2],
+    exp_central = input_data_mortality$exp[2],
     # exp = c(8, 9, 10), # Fake data. Deactivate to test exposure distribution.
     prop_pop_exp = 1,
     # prop_pop_exp = c(0.2, 0.3, 0.5), # Fake data. Deactivate to test exposure distribution.
     cutoff = input_data_mortality$cutoff[2],
-    rr = unlist(input_data_mortality[2, c("rr_central", "rr_lower", "rr_upper")]), # "rr_central", "rr_lower", "rr_upper"
+    rr_central = input_data_mortality[2,"rr_central"], 
+    rr_lower = input_data_mortality[2,"rr_lower"], 
+    rr_upper =input_data_mortality[2,"rr_upper"], 
     erf_increment = 10, 
     erf_shape = "log_linear",
-    first_age_pop = 0,last_age_pop = 99,
+    first_age_pop = 0,
+    last_age_pop = 99,
     prob_natural_death_male = lifetable_withPopulation[["male"]]$death_probability_natural,
     prob_natural_death_female = lifetable_withPopulation[["female"]]$death_probability_natural,
     prob_total_death_male = lifetable_withPopulation[["male"]]$death_probability_total,
@@ -556,10 +572,12 @@ check_bestcost(result_list_bestcost = bestcost_pm_yld_lifetable_geluft,
 
 bestcost_pm_yld_singlebhd  <- 
   bestcost::attribute_yld_singlebhd_rr(
-    exp = 8.85, 
+    exp_central = 8.85, 
     cutoff = 5,    
-    bhd = 25000,
-    rr = c(1.118, 1.060, 1.179),
+    bhd_central = 25000,
+    rr_central = 1.118,
+    rr_lower = 1.060, 
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear", 
     disability_weight = 0.5)
@@ -582,12 +600,14 @@ check_bestcost(result_list_bestcost = bestcost_pm_yld_singlebhd ,
 comparison_singlebhd_rr_delta <-
   bestcost::compare_health_singlebhd_rr(
     comparison_method = "delta",
-    exp_1 = 8.85, 
-    exp_2 = 6,
+    exp_central_1 = 8.85, 
+    exp_central_2 = 6,
     cutoff = 5,    
-    bhd_1 = 25000,
-    bhd_2 = 25000,
-    rr = c(1.118, 1.060, 1.179),
+    bhd_central_1 = 25000,
+    bhd_central_2 = 25000,
+    rr_central = 1.118, 
+    rr_lower = 1.060, 
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear", 
     info_1 = "PM2.5_mortality_2010",
@@ -603,12 +623,14 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_delta ,
 comparison_singlebhd_rr_pif <-
   bestcost::compare_health_singlebhd_rr(
     comparison_method = "pif",
-    exp_1 = 8.85,  
-    exp_2 = 6,
+    exp_central_1 = 8.85, 
+    exp_central_2 = 6,
     cutoff = 5,    
-    bhd_1 = 25000,
-    bhd_2 = 25000,
-    rr = c(1.118, 1.060, 1.179),
+    bhd_central_1 = 25000,
+    bhd_central_2 = 25000,
+    rr_central = 1.118, 
+    rr_lower = 1.060, 
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear", 
     info_1 = "PM2.5_mortality_2010",
@@ -628,18 +650,18 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_rr_pif ,
 # No PIF option in ar
 comparison_singlebhd_ar_delta <-
   bestcost::compare_health_ar(
-    exp_1 = c(57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
-    exp_2 = c(50, 55, 60, 65, 75), # Fake values
+    exp_central_1 = c(57.5, 62.5, 67.5, 72.5, 77.5),# Values as example provided by NIPH
+    exp_central_2 = c(50, 55, 60, 65, 75), # Fake values
     pop_exp_1 = c(387500, 286000, 191800, 72200, 7700), # Values as example provided by NIPH
     pop_exp_2 = c(387500, 286000, 191800, 72200, 7700), # Fake values
-    erf_c = "78.9270-3.1162*c+0.0342*c^2",
+    erf_c_central = "78.9270-3.1162*c+0.0342*c^2",
     info_1 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2020),
     info_2 = data.frame(pollutant = "road_noise", outcome = "highly_annoyance", year = 2022))
 
 # No study to compare bestcost results
 # Check only if results stay the same overtime despite developments
 check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta ,
-               result_vector_alternative = c(187594)) # Result on 16 May 2024
+               result_vector_alternative = c(62531)) # Result on 23 May 2024
 
 
 
@@ -654,12 +676,14 @@ check_bestcost(result_list_bestcost = comparison_singlebhd_ar_delta ,
 comparison_deaths_lifetable_delta <-
   bestcost::compare_deaths_lifetable_rr(
     comparison_method = "delta",
-    exp_1 = 8.85, # Fake data just for testing purposes
+    exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
-    exp_2 = 6, # Fake data just for testing purposes
+    exp_central_2 = 6, # Fake data just for testing purposes
     prop_pop_exp_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
-    rr = c(1.118, 1.060, 1.179),
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
@@ -682,8 +706,7 @@ comparison_deaths_lifetable_delta <-
     year_of_analysis_2 = 2019,
     info_1 = input_data_mortality$pollutant[2],
     info_2 = input_data_mortality$pollutant[2], 
-    min_age = 20,
-    max_age = NULL)
+    min_age = 20)
 
 # No study to compare bestcost results
 # Check only if results stay the same overtime despite developments
@@ -700,12 +723,14 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_delta[["detail
 comparison_deaths_lifetable_pif  <-
   bestcost::compare_deaths_lifetable_rr(
     comparison_method = "pif",
-    exp_1 = 8.85, # Fake data just for testing purposes
+    exp_central_1 = 8.85, # Fake data just for testing purposes
     prop_pop_exp_1 = 1, # Fake data just for testing purposes
-    exp_2 = 6, # Fake data just for testing purposes
+    exp_central_2 = 6, # Fake data just for testing purposes
     prop_pop_exp_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
-    rr = c(1.118, 1.060, 1.179),
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
@@ -725,11 +750,8 @@ comparison_deaths_lifetable_pif  <-
     prob_total_death_female_2 = lifetable_withPopulation[["female"]]$death_probability_total,
     population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
     population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
-    year_of_analysis_2 = 2019, 
-    info_1 = NULL,
-    info_2 = NULL, 
-    min_age = 20,
-    max_age = NULL)
+    year_of_analysis_2 = 2019,
+    min_age = 20)
 
 
 
@@ -752,12 +774,14 @@ check_bestcost(result_list_bestcost = comparison_deaths_lifetable_pif[["detailed
 comparison_yll_lifetable_delta  <-
   bestcost::compare_yll_lifetable_rr(
     comparison_method = "delta",
-    exp_1 = 8.85, # Fake data just for testing purposes
-    prop_pop_exp_1 = 1, # Fake data just for testing purposes
-    exp_2 = 6, # Fake data just for testing purposes
-    prop_pop_exp_2 = 1, # Fake data just for testing purposes
+    exp_central_1 = 8.85, # Fake data just for testing purposes
+    prop_pop_exp_central_1 = 1, # Fake data just for testing purposes
+    exp_central_2 = 6, # Fake data just for testing purposes
+    prop_pop_exp_central_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
-    rr = c(1.118, 1.060, 1.179),
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
@@ -780,8 +804,7 @@ comparison_yll_lifetable_delta  <-
     year_of_analysis_2 = 2019, 
     info_1 = input_data_mortality$pollutant[2],
     info_2 = input_data_mortality$pollutant[2], 
-    min_age = 20,
-    max_age = NULL)
+    min_age = 20)
 
 
 # No study to compare bestcost results
@@ -797,12 +820,14 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_delta[["detailed"
 comparison_yll_lifetable_pif <-
   bestcost::compare_yll_lifetable_rr(
     comparison_method = "pif",
-    exp_1 = 8.85, # Fake data just for testing purposes
-    prop_pop_exp_1 = 1, # Fake data just for testing purposes
-    exp_2 = 6, # Fake data just for testing purposes
-    prop_pop_exp_2 = 1, # Fake data just for testing purposes
+    exp_central_1 = 8.85, # Fake data just for testing purposes
+    prop_pop_exp_central_1 = 1, # Fake data just for testing purposes
+    exp_central_2 = 6, # Fake data just for testing purposes
+    prop_pop_exp_central_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
-    rr = c(1.118, 1.060, 1.179),
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
@@ -823,10 +848,9 @@ comparison_yll_lifetable_pif <-
     population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
     population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
-    info_1 = NULL,
-    info_2 = NULL, 
-    min_age = 20,
-    max_age = NULL)
+    info_1 = NA,
+    info_2 = NA, 
+    min_age = 20)
 
 
 # No study to compare bestcost results
@@ -851,12 +875,14 @@ check_bestcost(result_list_bestcost = comparison_yll_lifetable_pif[["detailed"]]
 comparison_yld_lifetable_delta  <-
   bestcost::compare_yld_lifetable_rr(
     comparison_method = "delta",
-    exp_1 = 8.85, # Fake data just for testing purposes
-    prop_pop_exp_1 = 1, # Fake data just for testing purposes
-    exp_2 = 6, # Fake data just for testing purposes
-    prop_pop_exp_2 = 1, # Fake data just for testing purposes
+    exp_central_1 = 8.85, # Fake data just for testing purposes
+    prop_pop_exp_central_1 = 1, # Fake data just for testing purposes
+    exp_central_2 = 6, # Fake data just for testing purposes
+    prop_pop_exp_central_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
-    rr = c(1.118, 1.060, 1.179),
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
@@ -880,7 +906,6 @@ comparison_yld_lifetable_delta  <-
     info_1 = input_data_mortality$pollutant[2],
     info_2 = input_data_mortality$pollutant[2], 
     min_age = 20,
-    max_age = NULL,
     #duration = 2,
     disability_weight = 1)
 
@@ -897,12 +922,14 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_delta[["detailed"
 comparison_yld_lifetable_pif <-
   bestcost::compare_yld_lifetable_rr(
     comparison_method = "pif",
-    exp_1 = 8.85, # Fake data just for testing purposes
-    prop_pop_exp_1 = 1, # Fake data just for testing purposes
-    exp_2 = 6, # Fake data just for testing purposes
-    prop_pop_exp_2 = 1, # Fake data just for testing purposes
+    exp_central_1 = 8.85, # Fake data just for testing purposes
+    prop_pop_exp_central_1 = 1, # Fake data just for testing purposes
+    exp_central_2 = 6, # Fake data just for testing purposes
+    prop_pop_exp_central_2 = 1, # Fake data just for testing purposes
     cutoff = 5,   # PM2.5=5, WHO AQG 2021 
-    rr = c(1.118, 1.060, 1.179),
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear",
     first_age_pop_1 = 0,
@@ -923,10 +950,9 @@ comparison_yld_lifetable_pif <-
     population_midyear_male_2 = lifetable_withPopulation[["male"]]$population, 
     population_midyear_female_2 = lifetable_withPopulation[["female"]]$population, 
     year_of_analysis_2 = 2019, 
-    info_1 = NULL,
-    info_2 = NULL, 
+    info_1 = NA,
+    info_2 = NA, 
     min_age = 20,
-    max_age = NULL,
     #duration = 2,
     disability_weight = 1)
 
@@ -947,12 +973,14 @@ check_bestcost(result_list_bestcost = comparison_yld_lifetable_pif[["detailed"]]
 comparison_yld_singlebhd_rr_delta <-
   bestcost::compare_yld_singlebhd_rr(
     comparison_method = "delta",
-    exp_1 = 8.85, 
-    exp_2 = 6,
+    exp_central_1 = 8.85, 
+    exp_central_2 = 6,
     cutoff = 5,    
     bhd_1 = 25000,
     bhd_2 = 25000,
-    rr = c(1.118, 1.060, 1.179),
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear", 
     disability_weight = 0.5,
@@ -973,12 +1001,14 @@ check_bestcost(result_list_bestcost = comparison_yld_singlebhd_rr_delta[["detail
 comparison_yld_singlebhd_rr_pif <-
   bestcost::compare_yld_singlebhd_rr(
     comparison_method = "pif",
-    exp_1 = 8.85,  
-    exp_2 = 6,
+    exp_central_1 = 8.85,  
+    exp_central_2 = 6,
     cutoff = 5,    
     bhd_1 = 25000,
     bhd_2 = 25000,
-    rr = c(1.118, 1.060, 1.179),
+    rr_central = 1.118,
+    rr_lower = 1.060,
+    rr_upper = 1.179,
     erf_increment = 10, 
     erf_shape = "log_linear", 
     disability_weight = 0.5,
