--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -138,8 +138,8 @@ bestcost_pm_copd_multiple <-
     info = paste0(airqplus_pm_copd$pollutant,"_", airqplus_pm_copd$evaluation_name))
 
 
-# Assess multiple geographical sections keeping the multiple uncertainties
-bestcost_pm_copd_multiple <-
+# Assess iteration geographical sections keeping the multiple uncertainties
+bestcost_pm_copd_geo <-
   bestcost::attribute_health_singlebhd_rr(
     exp_central = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)),
     exp_lower = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)-0.1),
@@ -223,7 +223,7 @@ check_bestcost(result_list_bestcost = bestcost_noise_ihd_expDist,
 
 # Obtain attributable cases using the bestcost package
 # for multiple geo_sections
-bestcost_noise_ihd_expDist_multiple <- 
+bestcost_noise_ihd_expDist_geo <- 
   bestcost::attribute_health_singlebhd_rr(
     exp_central = list(runif_with_seed(5,8,10,1), 
                           runif_with_seed(5,8,10,2), 
@@ -278,7 +278,7 @@ check_bestcost(result_list_bestcost = bestcost_noise_ha_ar,
 
 # Obtain attributable cases using the bestcost package and input data from niph
 # for multiple geo_sections
-bestcost_noise_ha_ar_multiple <- 
+bestcost_noise_ha_ar_geo <- 
   bestcost::attribute_health_singlebhd_ar(
     exp_central = list(runif_with_seed(5,8,10,1), 
                           runif_with_seed(5,8,10,2), 
@@ -411,8 +411,10 @@ bestcost_pm_deaths_lifetable_airqplus <-
 
 check_bestcost(result_list_bestcost = bestcost_pm_deaths_lifetable_airqplus,
                result_vector_alternative = c(2600.9, 1371, 3804))
+```
 
 
+```{r premature deaths with lifetable}
 # Now with input data from the Swiss project GeLuft
 bestcost_pm_deaths_lifetable_geluft <- 
     bestcost::attribute_deaths_lifetable_rr(
