--- a/r_package/testing/testing_Rpackage.Rmd
+++ b/r_package/testing/testing_Rpackage.Rmd
@@ -131,17 +131,7 @@ system.time(replicate(100, bestcost_pm_copd_test2 <-
     erf_shape = "log_linear", 
     info = paste0(airqplus_pm_copd$pollutant,"_", airqplus_pm_copd$evaluation_name))))
 
-microbenchmark(bestcost_pm_copd_test2 <-
-  bestcost::attribute_health_singlebhd_fun(
-    exp_central = airqplus_pm_copd$mean_concentration,
-    cutoff = airqplus_pm_copd$cut_off_value,   
-    bhd_central = airqplus_pm_copd$incidents_per_100_000_per_year/1E5*airqplus_pm_copd$population_at_risk,
-    rr_central = airqplus_pm_copd$relative_risk, 
-    rr_lower = airqplus_pm_copd$relative_risk_lower,
-    rr_upper = airqplus_pm_copd$relative_risk_upper,
-    erf_increment = 10, 
-    erf_shape = "log_linear", 
-    info = paste0(airqplus_pm_copd$pollutant,"_", airqplus_pm_copd$evaluation_name)))
+
 
 # Store the central, lower and upper estimate of the AirQ+ assessment
 airqplus_pm_copd_result <- 
@@ -178,7 +168,7 @@ bestcost_pm_copd_multiple <-
 
 
 # Assess iteration geographical sections keeping the multiple uncertainties
-bestcost_pm_copd_geo <-
+system.time(bestcost_pm_copd_geo <-
   bestcost::attribute_health_singlebhd_rr(
     exp_central = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)),
     exp_lower = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)-0.1),
@@ -194,7 +184,26 @@ bestcost_pm_copd_geo <-
     erf_shape = "log_linear", 
     geo_id_raw = 1:1E4, 
     geo_id_aggregated = rep("CH", 1E4),
-    info = "PM2.5_copd")
+    info = "PM2.5_copd"))
+
+
+system.time(bestcost_pm_copd_geo <-
+  bestcost::attribute_health_singlebhd_fun(
+    exp_central = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)),
+    exp_lower = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)-0.1),
+    exp_upper = as.list(runif_with_seed(1E4, 8.0, 9.0, 1)+0.1),
+    cutoff = 5,   
+    bhd_central = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_lower = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    bhd_upper = as.list(runif_with_seed(1E4, 25000, 35000, 1)),
+    rr_central = 1.369, 
+    rr_lower = 1.124,
+    rr_upper = 1.664,
+    erf_increment = 10, 
+    erf_shape = "log_linear", 
+    geo_id_raw = 1:1E4, 
+    geo_id_aggregated = rep("CH", 1E4),
+    info = "PM2.5_copd"))
 
 ```
 
